--- a/_block/_main.scss
+++ b/_block/_main.scss
@@ -65,6 +65,7 @@
                     align-items: center;
                     justify-content: end;
                     margin-right: 50px;
+                    font-size: 22px;
                 }
             }
         }
