--- a/css/main.css
+++ b/css/main.css
@@ -196,4 +196,5 @@
   align-items: center;
   justify-content: end;
   margin-right: 50px;
+  font-size: 22px;
 }/*# sourceMappingURL=main.css.map */
