--- a/_block/_main.scss
+++ b/_block/_main.scss
@@ -70,4 +70,51 @@
             }
         }
     }
+    .meet-dae {
+        width: 100%;
+        height: 900px;
+        border: 1px solid red;
+        background-color: #F1D3B9;
+        display: flex;
+        .img-box {
+            width: 50%;
+            height: 100%;
+            img {
+                margin-top: 100px;
+                margin-left: 190px
+            }
+        }
+        .img-text {
+            width: 50%;
+            height: 100%;
+            .img-text-box {
+                margin-top: 180px;
+                margin-right: 188px;
+                width: 500px;
+                height: 550px;
+                background-color: white;
+                h4 {
+                    width: 100%;
+                    height: 30%;
+                    text-align: center;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 30px;
+                    color: #B45F4D;
+                }
+                p {
+                    font-size: 19px;
+                    margin: 0 50px 50px 50px;
+                    color: #B45F4D;
+                }
+                a {
+                    font-size: 19px;
+                    margin: 0 50px 50px 50px;
+                    text-decoration: none;
+                    color: #B45F4D;
+                }
+            }
+        }
+    }
 }
